--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?useSSL=true
+spring.datasource.url = jdbc:mysql://localhost:3306/bookStore?useSSL=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = MyNewPass1234@
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
