--- a/BookStore/Dockerfile
+++ b/BookStore/Dockerfile
@@ -1,6 +1,6 @@
-FROM maven:3.8.2-jdk-slim
+FROM maven:3.8.2-jdk
 
 WORKDIR /BookStore
 COPY . .
-RUN mvn clean package -pl app02:app02 -am -DskipTests -e -X
+
 CMD mvn spring-boot:run
