--- a/BookStore/Dockerfile
+++ b/BookStore/Dockerfile
@@ -3,6 +3,6 @@ FROM maven:3.8.2-jdk-8
 WORKDIR /BookStore
 COPY . .
 COPY pom.xml .
-RUN mvn clean package  -Dmaven.test.skip
+RUN mvn clean install
 
 CMD mvn spring-boot:run
